[package]
name = "federated-auth-network"
version = "0.1.0"
edition = "2021"

[dependencies]
did-toolkit = "^0.2.0"
anyhow = "^1.0"
davisjr = "^0.2.0"
josekit = "^0.8.0"
serde = "^1.0"
serde_json = "^1.0"
ciborium = "^0.2.0"
base64 = "^0.21.0"
tokio = { version = "^1", features = ["full"] }
http = "^0.2.0"
